Fix position of the wheel on mobile

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -409,7 +409,7 @@ article.tasks-header > a {
   }
 
   .wait-wheel {
-    margin-left: 40%;
+    margin-left: 37.5%;
   }
 }
 
